docs/errors/examples/catch-after-catch-all/catch-after-catch-all.grob
// E2205 — a typed catch clause placed after the bare catch-all, which can never be reached
// Eventual path: docs/errors/examples/catch-after-catch-all/catch-after-catch-all.grob
try {
    fs.delete(`C:\tmp\scratch.txt`)
} catch e {
    log.warn("delete failed")
} catch (e: IoError) {
    log.error("io failure")
}
